--- a/lesson2/lesson2_3.ipynb
+++ b/lesson2/lesson2_3.ipynb
@@ -31,6 +31,71 @@
     "print(3 ** 4)\n",
     "print(99 ** 99)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2e0b6d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "78+95+83+69+70\n",
+    "2+3*4\n",
+    "(2+3)*4\n",
+    "2 * (1 + 2) ** 2 - 2 ** 2 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b922c0ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# python的基本資料型別\n",
+    "# int\n",
+    "5\n",
+    "15\n",
+    "\n",
+    "# float\n",
+    "5.0\n",
+    "\n",
+    "# str\n",
+    "\"5\"\n",
+    "'5'\n",
+    "\n",
+    "# bool\n",
+    "True\n",
+    "False\n",
+    "\n",
+    "5+5\n",
+    "\n",
+    "5+5.0\n",
+    "\n",
+    "5 + int('5')"
+   ]
   }
  ],
  "metadata": {
